--- a/scripts/packaging/win/snowflake_cli.wxs
+++ b/scripts/packaging/win/snowflake_cli.wxs
@@ -3,7 +3,7 @@
      xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
     <Product
         Id="*"
-        Name="Snowflake SnowflakeCLI"
+        Name="Snowflake CLI"
         Language="1033"
         Version="$(var.SnowflakeCLIVersion)"
         Manufacturer="Snowflake, Inc."
@@ -16,7 +16,7 @@
             Platform="x64" />
         <WixVariable Id="WixUIDialogBmp" Value="scripts\packaging\win\snowflake_msi_background.png" />
         <WixVariable Id="WixUIBannerBmp" Value="scripts\packaging\win\snowflake_msi_banner.png" />
-        <Media Id="1" Cabinet="snowsql.cab" EmbedCab="yes" />
+        <Media Id="1" Cabinet="snow.cab" EmbedCab="yes" />
         <MajorUpgrade AllowDowngrades="yes"/>
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="ProgramFiles64Folder" Name="PFiles">
@@ -26,10 +26,10 @@
         <DirectoryRef Id="TESTFILEPRODUCTDIR">
             <Component Id="snowsql.exe" Guid="2240777C-49B9-4D5F-ADF3-37483C0D7A61" Win64="yes">
                 <Environment Id="PATH" Name="PATH" Value="[TESTFILEPRODUCTDIR]" Permanent="no" Part="last" Action="set" System="yes"/>
-                <File Id="snow.exe" Source="dist\dist\snow.exe" KeyPath="yes" Checksum="yes"/>
+                <File Id="snow.exe" Source="dist\snow\snow.exe" KeyPath="yes" Checksum="yes"/>
             </Component>
         </DirectoryRef>
-        <Feature Id="MainApplication" Title="Snowflake SnowflakeCLI" Level="1">
+        <Feature Id="MainApplication" Title="Snowflake CLI" Level="1">
             <ComponentRef Id="snow.exe" />
         </Feature>
         <Icon Id="icon.ico" SourceFile="scripts/packaging/win/snowflake_msi.ico"/>
