--- a/scripts/packaging/win/snowflake_cli_template_v4.wxs
+++ b/scripts/packaging/win/snowflake_cli_template_v4.wxs
@@ -1,4 +1,5 @@
-﻿<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:util="http://wixtoolset.org/schemas/v4/wxs/util">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:util="http://wixtoolset.org/schemas/v4/wxs/util">
     <Package Name="Snowflake CLI" Language="1033" Version="$(var.SnowflakeCLIVersion)" Manufacturer="Snowflake, Inc." UpgradeCode="42280567-AE10-4184-8BB4-F98F59519CB2" InstallerVersion="405"><SummaryInformation Manufacturer="Snowflake, Inc." />
         <WixVariable Id="WixUIDialogBmp" Value="scripts\packaging\win\snowflake_msi_background.png" />
         <WixVariable Id="WixUIBannerBmp" Value="scripts\packaging\win\snowflake_msi_banner.png" />
