SNOW-1055755: windows build debug - ...wix util schema update - min test 3

--- a/scripts/packaging/win/snowflake_cli.wxs
+++ b/scripts/packaging/win/snowflake_cli.wxs
@@ -19,5 +19,5 @@
         Id="INSTALLFOLDER"
         Name="!(bind.Property.Manufacturer) !(bind.Property.ProductName)"
     />
-</StandardDirectory>>
+</StandardDirectory>
 </Wix>
