--- a/scripts/packaging/win/snowflake_cli.wxs
+++ b/scripts/packaging/win/snowflake_cli.wxs
@@ -14,11 +14,10 @@
     <Property Id="ARPURLINFOABOUT" Value="https://snowflake.com/" />
     <Property Id="ApplicationFolderName" Value="Snowflake CLI" />
     <Property Id="WixAppFolder" Value="WixUISupportPerUser" />
-  <StandardDirectory Id="ProgramFiles6432Folder">
-    <Directory
-        Id="INSTALLFOLDER"
-        Name="!(bind.Property.Manufacturer) !(bind.Property.ProductName)"
-    />
-</StandardDirectory>
-    </Package>
+    <StandardDirectory Id="ProgramFiles6432Folder">
+      <Directory Id="INSTALLFOLDER" Name="!(bind.Property.ProductName)" />
+    </StandardDirectory>
+    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
+    <UIRef Id="WixUI_InstallDir" />
+  </Package>
 </Wix>
