SNOW-1055755: wix3 installer - d8

--- a/scripts/packaging/win/snowflake_cli.wxs
+++ b/scripts/packaging/win/snowflake_cli.wxs
@@ -32,7 +32,7 @@
     </DirectoryRef>
     <Feature Id="MainApplication" Title="Snowflake CLI" Level="1">
       <ComponentRef Id="snow.exe" />
-      <ComponentGroupRef Id="SnowflakeCLIIntenaleFiles" />
+      <ComponentGroupRef Id="SnowflakeCLIInternalFiles />
     </Feature>
     <Icon Id="icon.ico" SourceFile="scripts\packaging\win\snowflake_msi.ico" />
     <Property Id="ARPPRODUCTICON" Value="icon.ico" />
